﻿v9.9.638 (2023-03-12)
- Fixed catchup default setting for playing/downloading content longer than 1 hour.

v9.9.637 (2023-01-05)
- EPG redraw fixes.
- Decreased interval for auto EPG update.
- Other fixes.
- Improved playlist mapping.

v9.9.636 (2022-12-28)
- Updated language files.
- Bug fixes.

v9.9.635 (2022-12-27)
- Timezone setting fixes.

v9.9.634 (2022-12-26)
- Hotfix.

v9.9.633 (2022-12-26)
- Improved playlist mapping.

v9.9.632 (2022-12-11)
- Improved stream quality for services CMore and Telia Play.
- Other fixes.

v9.9.631 (2022-11-20)
- Added setting for guide reinitializing to context menu.
- Fixed guide reinitializing.
- Fixed timezone error.

v9.9.630 (2022-11-12)
- Fixed timezone error.

v9.9.629 (2022-11-01)
- Fixed timezone error.
- Updated requests headers.

v9.9.628 (2022-08-27)
- Fixed prog +/- channel switch.

v9.9.627 (2022-08-23)
- Fixed timebar update.
- Fixed Telia Play and CMore catchup session timeout.
- Fixed catchup return while playing.
- Bug fixes.

v9.9.626 (2022-08-14)
- Fixed recording naming issues.
- Fixed dialog loop on catchup wrong type.

v9.9.625 (2022-07-15)
- Updated translations.
- Improved configuration tutorial.

v9.9.624 (2022-07-11)
- Fixed show Video OSD on touch tap.
- Fixed recording filename input return action.
- Bug fixes.

v9.9.623 (2022-07-10)
- Fixed recording filename match.

v9.9.622 (2022-07-10)
- Hotfix.

v9.9.621 (2022-07-09)
- Bug fixes.
- Fixed memory leaks.

v9.9.620 (2022-07-08)
- Added filename input for downloads and recordings.
- Other improvements.
- Bug fixes.

v9.9.619 (2022-07-07)
- Added overview guide window shourtcut.
- Database optimizations.

v9.9.618 (2022-07-02)
- Hotfix.

v9.9.617 (2022-07-02)
- Added overview guide window during playback.
- Fixed mktime overflow error.
- Optimized performance.

v9.9.616 (2022-06-25)
- Fixed cached playlists channel mismatching.

v9.9.615 (2022-06-20)
- Bug fixes.
- Fixed categories sortings.
- Fixed playlist channel matching.
- Optimized performance.