@@ -340,8 +340,9 @@
 		<setting id="archive_reverse_auto" label="60002" type="enum" default="0" lvalues="60000|60001" visible="eq(-3,true)"/>
 		<setting id="archive_reverse_days" visible="false"/>
 		<setting id="archive_manual_days" label="59988" type="slider" default="1" range="1,30" option="int" visible="eq(-5,true) + eq(-2,1)"/>
-		<setting label="59983" type="lsep" visible="eq(-6,true)"/>
-		<setting id="archive_finished_program" label="59984" type="bool" default="true" visible="eq(-7,true)"/>
+		<setting id="archive_timezone_adjust" label="60019" type="slider" default="0" range="-24,24" option="int" visible="eq(-6,true)"/>
+		<setting label="59983" type="lsep" visible="eq(-7,true)"/>
+		<setting id="archive_finished_program" label="59984" type="bool" default="true" visible="eq(-8,true)"/>
 	</category>
 	<category label="30309">
 		<setting id="listing_pre_days" label="30340" type="slider" default="1" range="1,14" option="int" visible="true"/>
