@@ -1,5 +1,6 @@
 ﻿v9.9.638 (2023-03-12)
 - Fixed catchup default setting for playing/downloading content longer than 1 hour.
+- Added offset and timezone adjustment for archive.
 
 v9.9.637 (2023-01-05)
 - EPG redraw fixes.
